[gd_scene load_steps=7 format=3 uid="uid://cjnamwk0mbts2"]

[ext_resource type="Script" path="res://Scenes/FoodItemScene.gd" id="1_fjw4n"]
[ext_resource type="StyleBox" uid="uid://d32dm3665drok" path="res://Scenes/Rooms/MiniButton.stylebox" id="2_pqsnr"]
[ext_resource type="FontFile" uid="uid://ccgpsjqwwow8o" path="res://Fonts/Bubblegum.ttf" id="3_3r4qh"]
[ext_resource type="Script" path="res://Scenes/Rooms/ButtonModulate.gd" id="3_a8lbr"]
[ext_resource type="StyleBox" uid="uid://5akr847h57wb" path="res://Scenes/DisabledMiniButton.tres" id="4_38qtm"]

[sub_resource type="CanvasTexture" id="CanvasTexture_0wf03"]

[node name="FoodItemScene" type="Control" node_paths=PackedStringArray("food_name", "food_price", "food_hungry_points", "buy_button")]
custom_minimum_size = Vector2(523, 70)
layout_mode = 3
anchors_preset = 0
offset_left = -2.0
offset_right = 521.0
offset_bottom = 70.0
script = ExtResource("1_fjw4n")
food_name = NodePath("MainContent/ImageNameHungryPoints/NameHungryPoints/Name")
food_price = NodePath("MainContent/PriceBuyButton/Price")
food_hungry_points = NodePath("MainContent/ImageNameHungryPoints/NameHungryPoints/HungryPoints")
buy_button = NodePath("MainContent/PriceBuyButton/Buy")

[node name="MainContent" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 494.0
offset_bottom = 70.0
theme_override_constants/separation = 0

[node name="ImageNameHungryPoints" type="HBoxContainer" parent="MainContent"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Image" type="TextureRect" parent="MainContent/ImageNameHungryPoints"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("CanvasTexture_0wf03")
expand_mode = 1

[node name="NameHungryPoints" type="VBoxContainer" parent="MainContent/ImageNameHungryPoints"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_constants/separation = -13
alignment = 1

[node name="Name" type="Label" parent="MainContent/ImageNameHungryPoints/NameHungryPoints"]
custom_minimum_size = Vector2(350, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_3r4qh")
theme_override_font_sizes/font_size = 35
text = "Name"

[node name="HungryPoints" type="Label" parent="MainContent/ImageNameHungryPoints/NameHungryPoints"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_3r4qh")
theme_override_font_sizes/font_size = 20
text = "AAAA"
horizontal_alignment = 3
vertical_alignment = 2

[node name="PriceBuyButton" type="HBoxContainer" parent="MainContent"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Price" type="Label" parent="MainContent/PriceBuyButton"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_3r4qh")
theme_override_font_sizes/font_size = 35
text = "10"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Buy" type="Button" parent="MainContent/PriceBuyButton" groups=["Button"]]
custom_minimum_size = Vector2(90, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = ExtResource("2_pqsnr")
theme_override_styles/hover = ExtResource("2_pqsnr")
theme_override_styles/pressed = ExtResource("2_pqsnr")
theme_override_styles/disabled = ExtResource("4_38qtm")
theme_override_styles/focus = ExtResource("4_38qtm")
script = ExtResource("3_a8lbr")
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="MainContent/PriceBuyButton/Buy"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 90.0
offset_bottom = 53.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.6)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("3_3r4qh")
theme_override_font_sizes/font_size = 30
text = "KUP"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MainContent/PriceBuyButton/Buy" to="." method="_on_buy_pressed"]
